# vulcain

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  gl3w_gen.py  install_osx.sh
cmake/: FindGLM.cmake
lib/: tracy_client.lib  tracy_client_phony.lib
resources/: animated_dude.dae  blocks_pixel_perfect.aseprite  cube.dae  cube.mtl  farm.mtl  futuristic_farm.dae  futurustic_house.dae  house.dae  house.mtl  imgui.ini  lowpoly_house.mtl  market.dae  nice_house.dae  nice_house.mtl  pine.dae  resources.lz4  road.mtl  road_block.dae  storehouse.dae  storehouse.mtl  storehouse_planks.dae  storehouse_wheat.dae  tent.dae  tree.dae  well.dae  woodshop.dae
resources/shaders/: colored.vert  default.frag  default.vert  deferred.frag  instanced.vert  passthrough.vert  postprocess.frag  shadow_pass.frag  shadow_pass.vert  shadow_pass_instanced.vert  skybox.vert  ssao.frag  ssao_blur.frag  ui.frag  ui.vert  voxel.frag  voxel.vert  voxel_shadow.vert  wireframe.vert
src/: collada_parser.cpp  collada_parser.h  collider.cpp  collider.h  entity.cpp  entity.h  game.h  game_time.h  guizmo.cpp  guizmo.h  housing.cpp  housing.h  io.cpp  io.h  main.cpp  map.cpp  map.h  mesh.cpp  mesh.h  message.cpp  message.h  navigation.cpp  navigation.h  obj_parser.cpp  obj_parser.h  packer.cpp  packer.h  packer_resource_list.h  pathfinding_job.cpp  pathfinding_job.h  registery.cpp  registery.h  renderer.cpp  renderer.h  service.h  shader.cpp  shader.h  shadows.cpp  shadows.h  system.cpp  (+2 more)
src/buildings/: building.cpp  building.h  debug_dump.cpp  debug_dump.h  delivery.cpp  delivery.h  placement.cpp  placement.h  resource_fetcher.cpp  resource_fetcher.h  storage_house.cpp  storage_house.h  woodworking.cpp  woodworking.h
src/environment/: trees.cpp  trees.h
src/ngLib/: console.cpp  logs.cpp  logs.h  ngcontainers.h  nglib.cpp  nglib.h  ngmath.cpp  ngmath.h  ngtime.h  sys.cpp  sys.h  types.h
src/ui/: ui.cpp  ui.h
test/: benchmarks.cpp  benchmarks.h  test_containers.cpp  test_registry.cpp  test_road_network.cpp
